--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
+    "node-schedule": "^1.2.0",
     "nodemailer": "^3.0.2",
     "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
