--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "log4js": "^1.1.0",
     "mongoose": "^4.8.2",
     "morgan": "~1.7.0",
     "node-schedule": "^1.2.0",
