--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "log4js": "^1.1.0",
     "mongoose": "^4.8.2",
     "morgan": "~1.7.0",
+    "mysql": "^2.13.0",
     "node-schedule": "^1.2.0",
     "nodemailer": "^3.0.2",
     "request": "^2.79.0",
