--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.14.0",
     "lodash": "^4.17.4",
     "log4js": "^1.1.0",
+    "moment": "^2.17.1",
     "mongoose": "^4.8.2",
     "morgan": "~1.7.0",
     "mysql": "^2.13.0",
