--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "body-parser": "~1.15.2",
+    "bootstrap": "^3.3.7",
     "cheerio": "^0.22.0",
     "cookie-parser": "~1.4.3",
     "crypto-js": "^3.1.9-1",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "log4js": "^1.1.0",
     "moment": "^2.17.1",
