1.  add ali-sdk

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "request": "^2.79.0",
     "sequelize": "^3.30.2",
     "serve-favicon": "~2.3.0",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "ws": "^2.2.1"
   }
 }
